<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F4F4"
        android:orientation="vertical"
        tools:context=".home.views.fragments.AddingNewToDoFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_198"
            android:layout_marginTop="-20dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <mobile.s.todogoals.utils.widget.ToDoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="18dp"
                android:text="@string/add_new_duty"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="26sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@color/Gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="60dp"
                android:background="@color/Gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="100dp"
                android:background="@color/Gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="175dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="175dp"
                android:background="@color/Gray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="-60dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_duty_recycler"
            android:orientation="vertical"
            android:paddingTop="22dp"
            android:paddingBottom="22dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <mobile.s.todogoals.utils.widget.ToDoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/add_title"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/duty_title_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_task"
                    android:hint="@string/what_you_wanna_do"
                    android:inputType="textCapWords"
                    android:maxLength="40"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#B5B5B5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <mobile.s.todogoals.utils.widget.ToDoTextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/duty_desc_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_task"
                    android:hint="@string/how_do_you_do_that"
                    android:inputType="textCapSentences"
                    android:maxLength="300"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#B5B5B5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"

                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <mobile.s.todogoals.utils.widget.ToDoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timeline_start"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <mobile.s.todogoals.utils.widget.ToDoTextView
                    android:id="@+id/duty_date_strat_txt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_task"
                    android:gravity="left|center"
                    android:hint="@string/when_will_you_start"
                    android:inputType="textCapWords"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#B5B5B5"
                    android:textSize="19sp" />

                <mobile.s.todogoals.utils.widget.ToDoTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/timeline_end"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <mobile.s.todogoals.utils.widget.ToDoTextView
                    android:id="@+id/duty_date_end_txt"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_input_task"
                    android:gravity="left|center"
                    android:hint="@string/when_will_you_finish"
                    android:inputType="textCapWords"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="#B5B5B5"
                    android:textSize="19sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="@dimen/default_16"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/default_16"
            android:background="@drawable/bg_create_btn"
            android:text="@string/create_now"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="@dimen/font_size" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="@dimen/default_16"
            android:layout_marginTop="14dp"
            android:layout_marginRight="@dimen/default_16"
            android:background="@drawable/bg_cancel_btn"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#AFAFAF"

            android:textSize="@dimen/font_size" />

    </LinearLayout>
</ScrollView>